<resources>
    <string name="app_name">MemsHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error">Ошибка</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_motivation">Мотивация</string>
    <string name="next_quotes">Дальше</string>
    <string name="ya_lic">Переведено сервисом «Яндекс.Переводчик»</string>
    <string name="ya_lic_btn">Перевести с помощью «Яндекс.Переводчик»</string>
    <string name="chack_norris_ru">Чак Норрис</string>
    <string name="chack_norris_en">Chack Norris</string>
    <string name="advice_slip">Советы на каждый день</string>
    <string name="programming_quotes">IT цитаты</string>
    <string name="history">История</string>
    <string name="empty_history">У Вас нету сохраненок</string>
    <string name="search">Поиск</string>
    <string name="create_mem">Создай свой Мем</string>
    <string name="choose_color">Выберите цвет</string>
    <string name="ok">Выбрать</string>
    <string name="download">Скачать</string>
    <string name="send">Отправить</string>
    <string name="appwidget_text">Текст</string>
    <string name="add_widget">Add widget</string>
    <string name="settings_widget">Настройка виджета</string>
    <string name="choose_el">Выберите цитаты для показа в виджете</string>
    <string name="save">Сохранить</string>
    <string name="eng">Eng</string>
    <string name="ru">Ru</string>
    <string name="author">author</string>
    <string name="choose_img">Выберите изображение</string>
    <string name="add_textview">Добавить текст</string>
    <string name="take_photo">Сделать фото</string>
</resources>
