<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_motivation"
            android:title="@string/menu_motivation" />
        <item
            android:id="@+id/nav_chack"
            android:title="@string/chack_norris_ru" />
        <item
            android:id="@+id/nav_advice"
            android:title="@string/advice_slip" />

        <item
            android:id="@+id/nav_programming"
            android:title="@string/programming_quotes" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_create_mem"
            android:title="@string/create_mem" />

    </group>
</menu>
