<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_motivation">


    <fragment
        android:id="@+id/nav_motivation"
        android:name="com.byfrunze.memshelper.fragments.MotivationFragment"
        android:label="@string/menu_motivation"
        tools:layout="@layout/fragment_motivation" />
    <fragment
        android:id="@+id/nav_chack"
        android:name="com.byfrunze.memshelper.fragments.ChackNorrisFragment"
        android:label="@string/chack_norris_ru"
        tools:layout="@layout/fragment_chack_norris" />
    <fragment
        android:id="@+id/nav_advice"
        android:name="com.byfrunze.memshelper.fragments.AdviceSlipFragment"
        android:label="@string/advice_slip"
        tools:layout="@layout/fragment_advice_slip" />
    <fragment
        android:id="@+id/nav_programming"
        android:name="com.byfrunze.memshelper.fragments.ProgrammingFragment"
        android:label="fragment_programming"
        tools:layout="@layout/fragment_programming" />
</navigation>