<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
    tools:context=".fragments.CreateMemFragment">


    <FrameLayout
        android:id="@+id/coord_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_change_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true" />


    </FrameLayout>

    <Button
        android:id="@+id/btn_change_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create"
        app:layout_constraintBottom_toTopOf="@id/ll_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coord_content" />

    <LinearLayout
        android:id="@+id/ll_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_img">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constr_layout_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ll_send"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/btn_download_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_file_download_white_24dp"
                    android:text="@string/download" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ll_download"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/btn_send_create"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_send_white_24dp"
                    android:text="@string/send" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_texts_create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" />

            <Button
                android:id="@+id/btn_new_text_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="ADD" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_text_font_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_font_create"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_color_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_color_hex_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/color_hex_code" />

            <Button
                android:id="@+id/btn_ok_color_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/ok" />

            <Button
                android:id="@+id/btn_choose_color_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_color" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_text_size_create"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/black">

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seek_bar_size_create"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:bsb_bubble_color="@color/colorAccent"
                app:bsb_bubble_text_color="@color/white"
                app:bsb_max="50"
                app:bsb_min="8"
                app:bsb_progress="18"
                app:bsb_second_track_color="#D32F2F"
                app:bsb_section_count="10"
                app:bsb_section_text_position="bottom_sides"
                app:bsb_show_progress_in_float="true"
                app:bsb_show_section_mark="true"
                app:bsb_show_section_text="true"
                app:bsb_show_thumb_text="true"
                app:bsb_track_color="#0097A7" />
        </FrameLayout>

        <com.roughike.bottombar.BottomBar
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/black"
            app:bb_tabXmlResource="@xml/bottom_bar_create_mem" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>